--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com.example.app</groupId>
-    <artifactId>JavaAppExampleWithTests</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>JavaAppExampleWithTests</name>
+    <artifactId>Mini-Projeto-Spring</artifactId>
+    <version>0.0.1</version>
+    <name>Mini-Projeto-Spring</name>
     <description>Projeto com exemplos de testes de código.</description>
     <properties>
         <java.version>17</java.version>
@@ -20,6 +20,8 @@
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <pitest-maven.version>1.15.2</pitest-maven.version>
         <pitest-junit5.version>1.2.1</pitest-junit5.version>
+        <resources-plugin.version>3.3.1</resources-plugin.version>
+        <surefire-plugin.version>3.0.0</surefire-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -64,7 +66,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.10.0</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -114,7 +116,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>${resources-plugin.version}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -122,7 +124,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${surefire-plugin.version}</version>
                 <configuration>
                     <includes>
                         <include>**/*Test</include>
